# libffi

./: .gitignore  Makefile.am  configure.ac  fficonfig.h.meson  libffi.hsproj  libffi.map.in  libffi.pc.in  meson.build  meson_options.txt
.ci/: meson-build.py
.github/workflows/: build.yml
include/: ffi.h.in  ffi_common.h  meson.build
src/: closures.c  dlmalloc.c  meson.build  trampoline_table.h
src/aarch64/: ffi.c  sysv.S
src/arm/: ffi.c  sysv.S
src/x86/: ffi.c  ffi64.c  ffiw64.c  sysv.S
testsuite/: meson.build
testsuite/libffi.call/: Makefile.frida  cls_pointer_va.c  va_pointer.c
